# laughing-octo-broccoli

./: .gitignore  Cargo.toml  README.md  build.rs  test.py
proto/: grpc_backend.proto  redpy.proto
python-src/red/: core.py  executor.py  scheduler.py
python-src/red/protocol/: redpy_pb2.py
src/: lib.rs  local_backend.rs  main.rs  task_runner.rs
src/grpc_backend/: executor.rs  metrics.rs  mod.rs  protocol.rs
src/scheduler/: executor.rs  mod.rs  task_coordinator.rs  task_placer.rs
